fix: update dark mode toggle functionality and improve styling in Profile component

--- a/portfolio/src/All/Profile.css
+++ b/portfolio/src/All/Profile.css
@@ -59,19 +59,15 @@
   .menu_ele:hover {   
      color: #6a5acd;
   }
-  
-  .dark_light {
-    margin-inline: 10px;
-    margin-left: auto;
-  }
-  /* From Uiverse.io by alfoly1988 */ 
-/* The switch - the box around the slider */
+
 .switch {
     font-size: 17px;
+    margin-inline: 10px;
+    margin-left: auto;
     position: relative;
     display: inline-block;
-    width: 3.5em;
-    height: 2em;
+    width: 2em;
+    height: 1em;
   }
   
   /* Hide default HTML checkbox */
@@ -90,18 +86,18 @@
     right: 0;
     bottom: 0;
     background-color: rgb(75, 73, 74);
-    transition: 0.4s;
+    transition: 0.2s;
     border-radius: 30px;
   }
   
   .slider:before {
     position: absolute;
     content: "";
-    height: 1.4em;
-    width: 1.4em;
+    height: .9em;
+    width: .9em;
     border-radius: 20px;
-    left: 0.3em;
-    bottom: 0.3em;
+    left: 0.09em;
+    bottom: 0.07em;
     background-color: black;
     box-shadow: inset 8px -4px 0 0 white;
     transition: 0.4s;
@@ -112,7 +108,7 @@
   }
   
   .switch input:checked + .slider:before {
-    transform: translateX(1.5em);
+    transform: translateX(.9em);
     background-color: yellow;
     box-shadow: none;
   }
