--- a/portfolio/src/All/Project/Projects.css
+++ b/portfolio/src/All/Project/Projects.css
@@ -27,7 +27,7 @@
   
   /* Project Card */
   .project-card {
-    background: rgba(255, 255, 255, 0.05);
+    background:transparent;
     padding: 20px;
     border-radius: 12px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
